# qmath

./: Adams3Integrator.hpp  CMakeLists.txt  Changelog  ColumnVector.hpp  Differentiator.hpp  Differentiator4O.hpp  HighpassFilter.hpp  Integrator.hpp  LowpassFilter.hpp  Makefile  MathException.cpp  MathException.hpp  Matrix.hpp  MatrixBase.hpp  MatrixInitializer.hpp  ODESolverRK4.hpp  QMathConfig.h.in  README.md  RowVector.hpp  Transform.cpp  Transform.hpp  Vector.hpp  VectorBase.hpp  doxygen.cfg  install_qmath  todo.txt
GSLCompat/: CMakeLists.txt  GSLCompat.cpp  GSLCompat.hpp  GSLCompat.t.cpp  Makefile  Readme
examples/: Adams3Integrator.t.cpp  CMakeLists.txt  Differentiator.t.cpp  Differentiator4O.t.cpp  HighpassFilter.t.cpp  Integrator.t.cpp  LowpassFilter.t.cpp  Makefile  MathException.t.cpp  Matrix.t.cpp  ODESolverRK4.t.cpp  Transform.t.cpp  Vector.t.cpp
win32/: QMath.ncb  QMath.sln  QMath.vcproj  QMathGsl.vcproj  examples_main.cpp  examples_main.hpp  readme  test.vcproj  test_QmathGsl.vcproj
